--- a/notebooks/Heart_Disease_Prediction_standard (1).ipynb
+++ b/notebooks/Heart_Disease_Prediction_standard (1).ipynb
@@ -8,20 +8,12 @@
       "source": [
         "# Heart Disease Prediction\n",
         "\n",
-        "In this machine learning project, I have collected the dataset from Kaggle (https://www.kaggle.com/ronitf/heart-disease-uci) and I will be using Machine Learning to make predictions on whether a person is suffering from Heart Disease or not."
-      ]
-    },
+        "In this machine learning project, I have collected the dataset from Kaggle (https://www.kaggle.com/ronitf/heart-disease-uci)"
     {
       "cell_type": "markdown",
       "metadata": {
         "id": "DlUmx-z9lkwr"
       },
-      "source": [
-        "### Import libraries\n",
-        "\n",
-        "Let's first import all the necessary libraries. I'll use `numpy` and `pandas` to start with. For visualization, I will use `pyplot` subpackage of `matplotlib`, use `rcParams` to add styling to the plots and `rainbow` for colors. For implementing Machine Learning models and processing of data, I will use the `sklearn` library."
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -45,10 +37,7 @@
       "metadata": {
         "id": "_RjxzCcLlkww"
       },
-      "source": [
-        "For processing the data, I'll import a few libraries. To split the available dataset for testing and training, I'll use the `train_test_split` method. To scale the features, I am using `StandardScaler`."
-      ]
-    },
+      
     {
       "cell_type": "code",
       "execution_count": null,
@@ -135,7 +124,7 @@
         "id": "Mo6F1F0clkwx"
       },
       "source": [
-        "Next, I'll import all the Machine Learning algorithms I will be using.\n",
+        "I import 4 Machine Learning algorithms which I use.\n",
         "1. K Neighbors Classifier\n",
         "2. Support Vector Classifier\n",
         "3. Decision Tree Classifier\n",
@@ -255,12 +244,7 @@
       "metadata": {
         "id": "ZX9dBrTslkwy"
       },
-      "source": [
-        "### Import dataset\n",
-        "\n",
-        "Now that we have all the libraries we will need, I can import the dataset and take a look at it. The dataset is stored in the file `dataset.csv`. I'll use the pandas `read_csv` method to read the dataset."
-      ]
-    },
+    
     {
       "cell_type": "code",
       "execution_count": null,
@@ -277,10 +261,7 @@
       "metadata": {
         "id": "vsk42fhrlkwy"
       },
-      "source": [
-        "The dataset is now loaded into the variable `dataset`. I'll just take a glimpse of the data using the `desribe()` and `info()` methods before I actually start processing and visualizing it."
-      ]
-    },
+     
     {
       "cell_type": "code",
       "execution_count": null,
@@ -845,11 +826,7 @@
       "metadata": {
         "id": "_qR6fnc4lkw0"
       },
-      "source": [
-        "Taking a look at the correlation matrix above, it's easy to see that a few features have negative correlation with the target value while some have positive.\n",
-        "Next, I'll take a look at the histograms for each variable."
-      ]
-    },
+     
     {
       "cell_type": "code",
       "execution_count": null,
@@ -905,19 +882,13 @@
       "metadata": {
         "id": "woGhHWqLlkw1"
       },
-      "source": [
-        "Taking a look at the histograms above, I can see that each feature has a different range of distribution. Thus, using scaling before our predictions should be of great use. Also, the categorical features do stand out."
-      ]
-    },
+     
     {
       "cell_type": "markdown",
       "metadata": {
         "id": "U8fIt0Idlkw1"
       },
-      "source": [
-        "It's always a good practice to work with a dataset where the target classes are of approximately equal size. Thus, let's check for the same."
-      ]
-    },
+      
     {
       "cell_type": "code",
       "execution_count": null,
@@ -1020,10 +991,7 @@
       "metadata": {
         "id": "DKlhqF07lkw9"
       },
-      "source": [
-        "The data is not ready for our Machine Learning application."
-      ]
-    },
+     
     {
       "cell_type": "markdown",
       "metadata": {
@@ -1057,7 +1025,7 @@
       "source": [
         "#### K Neighbors Classifier\n",
         "\n",
-        "The classification score varies based on different values of neighbors that we choose. Thus, I'll plot a score graph for different values of K (neighbors) and check when do I achieve the best score."
+        "Thus, I'll plot a score graph for different values of K (neighbors) and check when do I achieve the best score."
       ]
     },
     {
@@ -1191,10 +1159,6 @@
       "metadata": {
         "id": "SVP3HE2ilkxC"
       },
-      "source": [
-        "I'll now plot a bar plot of scores for each kernel and see which performed the best."
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -1244,7 +1208,7 @@
         "id": "MkeVSn6AlkxK"
       },
       "source": [
-        "The `linear` kernel performed the best, being slightly better than `rbf` kernel."
+        "The `linear` kernel performed slightly better than `rbf` kernel."
       ]
     },
     {
@@ -1278,7 +1242,7 @@
       "source": [
         "#### Decision Tree Classifier\n",
         "\n",
-        "Here, I'll use the Decision Tree Classifier to model the problem at hand. I'll vary between a set of `max_features` and see which returns the best accuracy."
+        "Here, I'll use the Decision Tree Classifier."
       ]
     },
     {
